<resources>
    <string name="app_name">IoTProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="topics">Topics</string>
    <string name="bus">Bus</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="others">Others</string>
    <string name="city">City</string>
    <string name="university">University</string>
</resources>
