<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:checkable="false"
        android:title="@string/topics"></item>

    <group
        android:id="@+id/topics"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_university"
            android:icon="@drawable/university"
            android:title="@string/university" />
        <item
            android:id="@+id/nav_bus"
            android:icon="@drawable/autobus"
            android:title="@string/bus" />
        <item
            android:id="@+id/nav_city"
            android:checkable="true"
            android:icon="@drawable/city"
            android:title="@string/city" />
    </group>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
        </menu>
    </item>

</menu>
